--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,12 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - run: echo world
+  print_other:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo My pipeline id is << pipeline.id >> and my git branch is << pipeline.git.branch >>
+             echo The name of the devops engineer - goltokka. 
 workflows:
   # Name the workflow "welcome"
   welcome:
@@ -26,3 +32,5 @@ workflows:
       - print_world:
           requires:
             - print_hello
+      - print_other
+        
