--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,23 @@ jobs:
     steps:
       - run: echo My pipeline id is << pipeline.id >> and my git branch is << pipeline.git.branch >>
              echo The name of the devops engineer - goltokka. 
+  save_hello_world:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo "persist to workspace test by goltokka" > output.txt
+      - persist_to_workspace:
+          root: /tmp/workspace
+          paths:
+            - target/output.txt
+            - build/*
+  print_save_hello_world:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - run: cat output.txt
 workflows:
   # Name the workflow "welcome"
   welcome:
@@ -33,4 +50,7 @@ workflows:
           requires:
             - print_hello
       - print_other
+      - save_hello_world
+      - print_save_hello_world
+
         
