--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,56 +1,88 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+# Orb 'circleci/welcome-orb@0.4.1' resolved to 'circleci/welcome-orb@0.4.1'
+version: 2
 jobs:
+  welcome/run:
+    docker:
+    - image: circleci/welcome-config-image:0.2.1
+    steps:
+    - run:
+        command: welcome_message.sh
+        name: Congratulations!
+    - run:
+        command: next_steps.sh
+        name: Next Steps
+    - run:
+        command: examples.sh
+        name: 'Help Topic: Examples - Tutorials, Sample Configs, Cookbook'
+    - run:
+        command: concepts.sh
+        name: 'Help Topic: Overview and Concepts'
+    - run:
+        command: using_the_cli.sh
+        name: 'Help Topic: Using the CLI'
   print_hello:
     docker:
-      - image: circleci/node:13.8.0
+    - image: circleci/node:13.8.0
     steps:
-      - run: echo hello
+    - run:
+        command: echo hello
   print_world:
     docker:
-      - image: circleci/node:13.8.0
+    - image: circleci/node:13.8.0
     steps:
-      - run: echo world
+    - run:
+        command: echo world
   print_other:
     docker:
-      - image: circleci/node:13.8.0
+    - image: circleci/node:13.8.0
     steps:
-      - run: echo My pipeline id is << pipeline.id >> and my git branch is << pipeline.git.branch >>
-             echo The name of the devops engineer - goltokka. 
-  save_hello_world:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo "persist to workspace test by goltokka" > output.txt
-      - persist_to_workspace:
-          root: root/tmp/workspace
-          paths:
-            - target/output.txt
-            - build/*
-  print_save_hello_world:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - attach_workspace:
-          at: root/tmp/workspace
-      - run: cat output.txt
+    - run:
+        command: echo My pipeline id is 8159ab60-3089-41fa-9aec-84d8fbf65297 and my git branch is main echo The name of the devops engineer - goltokka.
 workflows:
-  # Name the workflow "welcome"
   welcome:
-    # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
-      - print_hello
-      - print_world:
-          requires:
-            - print_hello
-      - print_other
-      - save_hello_world
-      - print_save_hello_world 
+    - welcome/run
+    - print_hello
+    - print_world:
+        requires:
+        - print_hello
+    - print_other
+  version: 2
 
-        
+# Original config.yml file:
+# # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
+# version: 2.1
+# # Use a package of configuration called an orb.
+# orbs:
+#   # Declare a dependency on the welcome-orb
+#   welcome: circleci/welcome-orb@0.4.1
+# # Orchestrate or schedule a set of jobs
+# jobs:
+#   print_hello:
+#     docker:
+#       - image: circleci/node:13.8.0
+#     steps:
+#       - run: echo hello
+#   print_world:
+#     docker:
+#       - image: circleci/node:13.8.0
+#     steps:
+#       - run: echo world
+#   print_other:
+#     docker:
+#       - image: circleci/node:13.8.0
+#     steps:
+#       - run: echo My pipeline id is << pipeline.id >> and my git branch is << pipeline.git.branch >>
+#              echo The name of the devops engineer - goltokka. 
+# workflows:
+#   # Name the workflow \"welcome\"
+#   welcome:
+#     # Run the welcome/run job in its own container
+#     jobs:
+#       - welcome/run
+#       - print_hello
+#       - print_world:
+#           requires:
+#             - print_hello
+#       - print_other
+#         
