--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,56 +1,25 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+commands: # a reusable command with parameters
+  print_pipeline_id:
+    parameters:
+      to:
+        default: "world"
+        type: string
+    steps:
+      - run: echo "My circle ci workflow ID <<parameters.to>>"
 jobs:
-  print_hello:
+  my-job:
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/base:stable
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
-      - run: echo hello
-  print_world:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo world
-  print_other:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo My pipeline id is << pipeline.id >> and my git branch is << pipeline.git.branch >>
-             echo The name of the devops engineer - goltokka. 
-  save_hello_world:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo "persist to workspace test by goltokka" > output.txt
-      - persist_to_workspace:
-          root: root/tmp/workspace
-          paths:
-            - target/output.txt
-            - build/*
-  print_save_hello_world:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - attach_workspace:
-          at: root/tmp/workspace
-      - run: cat output.txt
+      - print_pipeline_id:
+          to: $CIRCLE_WORKFLOW_ID
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  my-workflow:
     jobs:
-      - welcome/run
-      - print_hello
-      - print_world:
-          requires:
-            - print_hello
-      - print_other
-      - save_hello_world
-      - print_save_hello_world 
+      - my-job
 
-        
+
