--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,11 @@ commands: # a reusable command with parameters
         default: "world"
         type: string
     steps:
-      - run: echo "My circle ci workflow ID <<parameters.to>>"
+      - run: echo "My circle ci workflow ID <<parameters.to>>" 
+
+  to_print_pipeline_id:
+    steps:
+      - run: echo ${CIRCLE_WORKFLOW_ID}
 jobs:
   my-job:
     docker:
@@ -16,10 +20,16 @@ jobs:
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - print_pipeline_id:
-          to: $CIRCLE_WORKFLOW_ID
+          to: $CIRCLE_WORKFLOW_ID 
+  my_jobs:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - print_pipeline_id
 workflows:
   my-workflow:
     jobs:
       - my-job
-
-
+  my_workflows:
+    jobs:
+      - my_jobs
